edit(documentation): fixed readme and testing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travejor - Traveler Profiles</title>
+    <title>Travejor - Travejor Profiles</title>
     <style>
         * {
             margin: 0;
@@ -327,7 +327,7 @@
     <main class="container">
         <section class="profile-section">
             <div class="search-container">
-                <h2>Find Traveler Profile</h2>
+                <h2>Find Travejor Profile</h2>
                 <div class="input-group">
                     <input 
                         type="text" 
